--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack -w",
-    "start": "live-server"
+    "start": "live-server",
+    "test": "babel-tape-runner test/**/*-test.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "babel-preset-react": "^6.3.13",
     "react": "^0.14.3",
     "react-dom": "^0.14.3"
   },
@@ -19,7 +19,11 @@
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-tape-runner": "^2.0.0",
+    "jsdom": "^7.2.1",
     "live-server": "^0.9.0",
+    "tape": "^4.2.2",
     "webpack": "^1.12.9"
   }
 }
