--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "watch": "webpack -w",
     "start": "live-server",
-    "test": "babel-tape-runner test/**/*-test.js"
+    "test": "babel-tape-runner test/*-test.js",
+    "browser-test": "browserify test/*-test.js -t [ babelify --presets [ es2015 react ] ] | tape-run"
   },
   "keywords": [],
   "author": "",
@@ -21,9 +22,15 @@
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
     "babel-tape-runner": "^2.0.0",
+    "babelify": "^7.2.0",
+    "browser-run": "^3.0.5",
+    "browserify": "^12.0.1",
     "jsdom": "^7.2.1",
     "live-server": "^0.9.0",
+    "phantomjs": "^1.9.19",
     "tape": "^4.2.2",
+    "tape-run": "^2.1.0",
+    "testling": "^1.7.1",
     "webpack": "^1.12.9"
   }
 }
