--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jsdom": "^7.2.1",
     "live-server": "^0.9.0",
     "phantomjs": "^1.9.19",
+    "react-addons-test-utils": "^0.14.5",
     "tape": "^4.2.2",
     "tape-run": "^2.1.0",
     "testling": "^1.7.1",
