--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "watch": "webpack -w",
     "start": "live-server",
-    "test": "babel-tape-runner test/*-test.js",
-    "browser-test": "browserify test/*-test.js -t [ babelify --presets [ es2015 react ] ] -u 'react/lib/ReactContext' -u 'react/lib/ExecutionEnvironment' | tape-run"
+    "test": "tape -r babel-register test/*-test.js | faucet",
+    "browser-test": "browserify test/*-test.js -t [ babelify --presets [ es2015 react ] ] -u 'react/lib/ReactContext' -u 'react/lib/ExecutionEnvironment' | tape-run -b chrome"
   },
   "keywords": [],
   "author": "",
@@ -21,11 +21,12 @@
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
     "babel-preset-react": "^6.3.13",
-    "babel-tape-runner": "^2.0.0",
+    "babel-register": "^6.7.2",
     "babelify": "^7.2.0",
     "browser-run": "^3.0.5",
     "browserify": "^12.0.1",
     "enzyme": "^1.2.0",
+    "faucet": "0.0.1",
     "jsdom": "^7.2.1",
     "live-server": "^0.9.0",
     "phantomjs": "^1.9.19",
