--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-core": "^6.3.17",
     "babel-loader": "^6.2.0",
     "babel-preset-es2015": "^6.3.13",
+    "babel-preset-node5": "^11.0.1",
     "babel-preset-react": "^6.3.13",
     "babel-register": "^6.7.2",
     "babelify": "^7.2.0",
