--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "watch": "webpack -w",
-    "start": "live-server",
+    "start": "live-server --port=8081",
     "test": "tape -r ./test/babel-register-setup test/*-test.js | faucet",
     "browser-test": "browserify test/*-test.js -t [ babelify --presets [ es2015 react ] ] -u 'react/lib/ReactContext' -u 'react/lib/ExecutionEnvironment' | tape-run -b chrome"
   },
@@ -26,6 +26,7 @@
     "babelify": "^7.2.0",
     "browser-run": "^3.0.5",
     "browserify": "^12.0.1",
+    "doubler": "^0.6.0",
     "enzyme": "^1.2.0",
     "faucet": "0.0.1",
     "jsdom": "^7.2.1",
